--- a/src/main/resources/static/OrderForm.html
+++ b/src/main/resources/static/OrderForm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="/PizzaOrder.do" method="get">
+<form action="/api/PizzaOrder" method="get">
     <h3>Order Pizza</h3>
     <input type="radio" name="size" value="small"> Small
     <br>
